# identity-mesh

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ORIGIN.md
examples/: agent_to_service.py
identity-mesh/: README.md  push.ps1
identity-mesh/src/identity_mesh/: broker.py  rotation.py  workload.py
identity-mesh/tests/: test_rotation.py  test_spiffe_id.py  test_workload.py
src/identity_mesh/: __init__.py  spiffe_id.py  verifier.py
tests/: test_broker.py
