[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "identity-mesh"
version = "0.1.0"
description = "SPIFFE-style workload identity broker for AI agents - short-lived JWT-SVIDs, audience binding, zero long-lived API keys"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mirza Causevic" }]
keywords = ["spiffe", "workload-identity", "zero-trust", "jwt-svid", "agent-security", "ciso", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/mizcausevic-dev/identity-mesh"
Repository = "https://github.com/mizcausevic-dev/identity-mesh"
Issues = "https://github.com/mizcausevic-dev/identity-mesh/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/identity_mesh"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
